--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -79,30 +79,12 @@
   align-items: center;
   position: relative;
   padding: 4rem 0;
+  flex-direction: column;
+  gap: 50px;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.center a {
+  text-decoration: underline;
 }
 
 .logo {
