--- a/styles/pages.module.css
+++ b/styles/pages.module.css
@@ -8,8 +8,8 @@
 }
 
 .content {
-  max-width: var(--max-width);
-  width: 100%;
+  width: var(--max-width);
+  max-width: 100%;
 }
 
 .header {
@@ -17,25 +17,8 @@
   justify-content: space-between;
   align-items: center;
   font-size: 0.85rem;
-  z-index: 2;
   font-family: var(--font-mono);
   padding-bottom: 30px;
-}
-
-.header a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.header p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
 }
 
 .grid {
@@ -46,7 +29,6 @@
 }
 
 .card {
-  cursor: pointer;
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
@@ -107,63 +89,34 @@
     text-align: center;
   }
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .header {
-    font-size: 0.8rem;
-  }
-
-  .header a {
-    padding: 1rem;
-  }
-
   .header a,
   .header div {
     display: flex;
     justify-content: center;
     position: fixed;
-    width: 100%;
+    padding: 2rem 1rem 1.4rem;
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+    z-index: 1;
   }
 
   .header div {
     align-items: center;
     inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
     background: linear-gradient(to bottom,
         rgba(var(--background-start-rgb), 1),
         rgba(var(--callout-rgb), 0.5));
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-    z-index: 1;
   }
 
   .header a {
     align-items: flex-end;
-    pointer-events: none;
     inset: auto 0 0;
-    padding: 2rem;
     background: linear-gradient(to bottom,
         transparent 0%,
         rgb(var(--background-end-rgb)) 40%);
-    z-index: 1;
   }
 }
 
