--- a/styles/app.module.css
+++ b/styles/app.module.css
@@ -1,96 +1,187 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
 }
 
 .content {
-    width: var(--max-width);
-    max-width: 100%;
+  width: var(--max-width);
+  max-width: 100%;
 }
 
 .toast {
-    position: fixed;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #e6f3ff;
-    color: #0066cc;
-    padding: 10px 20px;
-    border-radius: 5px;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 900px;
-    box-sizing: border-box;
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #e6f3ff;
+  color: #000624;
+  padding: 10px 20px;
+  border-radius: 5px;
+  z-index: 1000;
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 900px;
+  box-sizing: border-box;
 }
 
 .toast-close {
-    background: none;
-    border: none;
-    color: #0066cc;
-    font-size: 1.2em;
-    cursor: pointer;
-    margin-left: 10px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: none;
+  border: none;
+  color: #000624;
+  font-size: 1.2em;
+  cursor: pointer;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .toast-content {
-    margin-right: 15px;
-    flex: 1;
+  margin-right: 15px;
+  flex: 1;
 }
 
 .toast-close:hover {
-    color: #004080;
+  color: #004080;
 }
 
 @media (max-width: 768px) {
-    .toast {
-        width: 95%;
-        padding: 8px 15px;
-        font-size: 0.9em;
-    }
+  .toast {
+    width: 95%;
+    padding: 8px 15px;
+    font-size: 0.9em;
+  }
 
-    .toast-close {
-        font-size: 1em;
-    }
+  .toast-close {
+    font-size: 1em;
+  }
 }
 
-
 .toast-icon {
-    width: 22px;
-    height: 22px;
-    fill: white;
-    margin-right: 20px;
-    background-color: #0066cc;
-    padding: 5px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+  background-color: transparent;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 480px) {
-    .toast {
-        top: 0;
-        left: 0;
-        right: 0;
-        transform: none;
-        width: 100%;
-        border-radius: 0;
-        padding: 10px 15px;
-    }
+  .toast {
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: none;
+    width: 100%;
+    border-radius: 0;
+    padding: 10px 15px;
+  }
 
-    .toast-content {
-        margin-right: 10px;
-    }
+  .toast-content {
+    margin-right: 10px;
+  }
+}
+
+.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.disabled:hover {
+  /* Style for hover state */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.row > * {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.row > *:last-child {
+  margin-right: 0;
+}
+
+.row > *:first-child {
+  margin-left: 0;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.column > * {
+  margin-bottom: 1rem;
+}
+
+.column > *:last-child {
+  margin-bottom: 0;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.row.start {
+  justify-content: flex-start;
+}
+
+.row.end {
+  justify-content: flex-end;
+}
+
+.row.center {
+  justify-content: center;
+}
+
+.column.start {
+  align-items: flex-start;
+}
+
+.column.end {
+  align-items: flex-end;
+}
+
+.column.center {
+  align-items: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(50%, auto));
+  width: var(--max-width);
+  max-width: 100%;
+}
+
+@media (max-width: 700px) {
+  .grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+}
+
+@media (min-width: 701px) and (max-width: 1120px) {
+  .grid {
+    grid-template-columns: repeat(2, 50%);
+  }
 }
