changed layout to not show all apps on all pages.
changed booking design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,3 +158,16 @@ h1 {
   font-size: 32px;
   font-weight: 700;
 }
+
+button {
+  cursor: pointer;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 16px;
+  margin-bottom: 16px;
+  border-radius: 4px;
+  width: fit-content;
+  border: none;
+  background: none;
+}
