--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,194 +1,196 @@
 :root {
-    --max-width: 1100px;
-    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+  --max-width: 1100px;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
-    --card-rgb: 180, 185, 188;
-    --card-border-rgb: 131, 134, 135;
-    --premium-rgb: 116, 22, 165;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+  --card-rgb: 180, 185, 188;
+  --card-border-rgb: 131, 134, 135;
+  --premium-rgb: 116, 22, 165;
 }
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html,
 body {
-    max-width: 100vw;
-    overflow-x: hidden;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
-    color: rgb(0, 0, 0);
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-    ) rgb(var(--background-start-rgb));
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.85rem;
-    font-family: var(--font-mono);
-    padding-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.85rem;
+  font-family: var(--font-mono);
+  padding-bottom: 30px;
 }
 
 @media (max-width: 700px) {
-    header a,
-    header div {
-        display: flex;
-        justify-content: center;
-        position: fixed;
-        background-clip: padding-box;
-        backdrop-filter: blur(24px);
-        z-index: 1;
-    }
+  header a,
+  header div {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+    z-index: 1;
+  }
 
-    header div {
-        padding: 0.5rem;
-        inset: 0 0 auto;
-        border-bottom: 1px solid rgba(var(--card-border-rgb), 0.25);
-        background: linear-gradient(
-                to top,
-                transparent 0%,
-                rgb(var(--background-start-rgb)) 40%
-        );
-    }
+  header div {
+    padding: 0.5rem;
+    inset: 0 0 auto;
+    border-bottom: 1px solid rgba(var(--card-border-rgb), 0.25);
+    background: linear-gradient(
+      to top,
+      transparent 0%,
+      rgb(var(--background-start-rgb)) 40%
+    );
+  }
 
-    header a {
-        padding: 1.5rem;
-        inset: auto 0 0;
-        border-top: 1px solid rgba(var(--card-border-rgb), 0.25);
-        background: linear-gradient(
-                to bottom,
-                transparent 0%,
-                rgb(var(--background-end-rgb)) 40%
-        );
-    }
+  header a {
+    padding: 1.5rem;
+    inset: auto 0 0;
+    border-top: 1px solid rgba(var(--card-border-rgb), 0.25);
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      rgb(var(--background-end-rgb)) 40%
+    );
+  }
 }
 
 main,
 footer {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(50%, auto));
-    gap: 32px;
-    width: var(--max-width);
-    max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(50%, auto));
+  gap: 32px;
+  width: var(--max-width);
+  max-width: 100%;
 }
 
 @media (max-width: 700px) {
-    main,
-    footer {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
+  main,
+  footer {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
 }
 
 @media (min-width: 701px) and (max-width: 1120px) {
-    main,
-    footer {
-        grid-template-columns: repeat(2, 50%);
-    }
+  main,
+  footer {
+    grid-template-columns: repeat(2, 50%);
+  }
 }
 
 section {
-    padding: 1rem 1.2rem;
-    border-radius: 12px;
-    background: rgba(var(--card-rgb), 0);
-    border: 1px solid rgba(var(--card-border-rgb), 0);
-    transition: background 200ms,
+  padding: 1rem 1.2rem;
+  border-radius: 12px;
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition:
+    background 200ms,
     border 200ms;
 }
 
 section span {
-    display: inline-block;
-    transition: transform 200ms;
+  display: inline-block;
+  transition: transform 200ms;
 }
 
 section h2 {
-    font-weight: 600;
-    margin-bottom: 0.7rem;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
 }
 
 section p {
-    margin: 0;
-    opacity: 0.6;
-    font-size: 0.9rem;
-    line-height: 1.5;
+  margin: 0;
+  opacity: 0.6;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 @media (hover: hover) and (pointer: fine) {
-    section:hover {
-        background: rgba(var(--card-rgb), 0.1);
-        border: 1px solid rgba(var(--card-border-rgb), 0.15);
-    }
+  section:hover {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  }
 
-    section:hover span {
-        transform: translateX(4px);
-    }
+  section:hover span {
+    transform: translateX(4px);
+  }
 }
 
 article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 4rem 0;
-    /*flex-direction: column;*/
-    gap: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 4rem 0;
+  /*flex-direction: column;*/
+  gap: 50px;
 }
 
 article a {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 h1 {
-    font-size: 32px;
-    font-weight: 700;
+  font-size: 32px;
+  font-weight: 700;
 }
 
 button {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    margin-bottom: 16px;
-    border-radius: 16px;
-    width: fit-content;
-    border: none;
-    background: none;
-    text-align: center;
-    justify-content: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  margin-bottom: 16px;
+  border-radius: 16px;
+  width: fit-content;
+  border: none;
+  background: none;
+  text-align: center;
+  justify-content: center;
 }
 
 li {
-    margin-bottom: 0.5rem;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+  margin-bottom: 0.5rem;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 ul {
-    list-style-type: none;
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    gap: 10px;
-    width: 100%;
+  list-style-type: none;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  gap: 10px;
+  width: 100%;
 }
