--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
   --premium-rgb: 116, 22, 165;
+  --ring-rgb: 59, 130, 246;
 }
 
 * {
@@ -193,4 +194,44 @@ ul {
   justify-content: flex-start;
   gap: 10px;
   width: 100%;
+}
+
+input {
+  background-color: #f9fafb;
+  border: 1px solid rgba(var(--card-border-rgb), 0.5);
+  font-size: 0.875rem;
+  border-radius: 0.5rem;
+  width: 100%;
+  padding: 0.625rem;
+  max-width: 100%;
+}
+
+input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(var(--ring-rgb), 0.5);
+  border-color: rgba(var(--ring-rgb), 1);
+}
+
+input::placeholder {
+  opacity: 0.5;
+}
+
+label {
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: rgba(var(--card-border-rgb), 1);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  font-size: 16px;
+  border: none;
+  background: none;
+  text-align: center;
+  justify-content: center;
+  gap: 16px;
+  width: 100%;
+  max-width: 100%;
 }
