--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -36,9 +36,14 @@
 /* Modal overlay */
 .modal-overlay {
     position: fixed;
-    inset: 0;
-    background-color: black;
-    opacity: 0.25;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 6, 36, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Modal header */
